[package]
name = "mindstorm_backend_shuttle"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.14.0"
shuttle-tide = "0.14.0"
tokio = "1.27.0"
tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
